--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,19 @@
+body {
+    background: radial-gradient(circle, 
+        #ff9a9e, #fad0c4, #fad0c4, 
+        #fbc2eb, #a18cd1, #8ec5fc, 
+        #78ffd6, #a8e063, #d4fc79, 
+        #fef253, #ffb347, #ffcc33);
+    height: 100vh;
+    margin: 0;
+}
+
 body > table{
-	width: 80%;
+	width: 95%;
+}
+
+h1{
+text-align: center;
 }
 
 table{
@@ -11,33 +25,32 @@ table.list{
 }
 
 td, th {
-	border: 1px solid #dddddd;
 	text-align: left;
 	padding: 8px;
 }
 
-tr:nth-child(even),table.list thead>tr {
-	background-color: #dddddd;
+tr:nth-child(even),table.list thead > tr {
+	border: 1px solid #000;
 }
 
 input[type=text], input[type=number] {
-	width: 100%;
+	width: 130%;
 	padding: 12px 20px;
-	margin: 8px 0;
+	margin: 8px 0px;
 	display: inline-block;
-	border: 1px solid #ccc;
-	border-radius: 4px;
+	border: 1px solid #000;
+	border-radius: 15px;
 	box-sizing: border-box;
 }
 
 input[type=submit]{
 	width: 30%;
-	background-color: #ddd;
+	background-color: grey;
 	color: #000;
 	padding: 14px 20px;
 	margin: 8px 0;
 	border: none;
-	border-radius: 4px;
+	border-radius: 15px;
 	cursor: pointer;
 }
 
@@ -50,4 +63,73 @@ a{
 	text-decoration: underline;
 	color: #0000ee;
 	margin-right: 4px;
+}
+
+table.list {
+    display: block;
+    max-height: 175px;
+    overflow-y: auto;
+}
+
+table.list {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table.list tbody tr {
+    border: 1px solid #000;
+}
+
+Padding & Alignment
+table.list th, 
+table.list td {
+    padding: 8px;
+    text-align: left;
+}
+
+table {
+    width: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+td:first-child {
+    width: 35%;
+    padding-right: 20px;
+    vertical-align: top;
+}
+
+td:last-child {
+    width: 60%;
+    vertical-align: top;
+}
+
+table.list {
+    width: 70%;
+    border-collapse: collapse;
+}
+
+table.list tbody tr {
+    border: 1px solid #000;
+}
+
+table.list th, 
+table.list td {
+    padding: 8px;
+    text-align: left;
+}
+
+table.list tbody {
+    display: block;
+    max-height: 175px;
+    overflow-y: auto;
+}
+
+table.list thead,
+table.list tbody tr {
+    display: table;
+    width: 90%;
+    table-layout: fixed;
 }
